# Drone_Works

./: README.md  requirements.txt
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/error_viz/: CMakeLists.txt  package.xml
catkin_ws/src/error_viz/scripts/: visualizer.py
catkin_ws/src/orchestrator/: CMakeLists.txt  package.xml
catkin_ws/src/orchestrator/launch/: run.launch
catkin_ws/src/trainer/: CMakeLists.txt
catkin_ws/src/trainer/scripts/: QuadrotorTrainEnv.py  enjoy.py  train.py
catkin_ws/src/trainer/tensorboard_log_dir/DDPG_1/: events.out.tfevents.1627254415.ubuntu.79474.0
catkin_ws/src/trainer/tensorboard_log_dir/DDPG_2/: events.out.tfevents.1627266417.ubuntu.113110.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_1/: events.out.tfevents.1627253077.ubuntu.17010.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_10/: events.out.tfevents.1627298431.ubuntu.13875.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_11/: events.out.tfevents.1627298552.ubuntu.20023.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_12/: events.out.tfevents.1627299578.ubuntu.60138.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_13/: events.out.tfevents.1627300549.ubuntu.114515.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_14/: events.out.tfevents.1627301302.ubuntu.32886.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_15/: events.out.tfevents.1627301686.ubuntu.56320.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_16/: events.out.tfevents.1627302507.ubuntu.110906.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_17/: events.out.tfevents.1627302931.ubuntu.120849.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_2/: events.out.tfevents.1627266997.ubuntu.11859.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_3/: events.out.tfevents.1627290776.ubuntu.71320.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_4/: events.out.tfevents.1627294851.ubuntu.124098.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_5/: events.out.tfevents.1627297015.ubuntu.126250.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_6/: events.out.tfevents.1627297338.ubuntu.127772.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_7/: events.out.tfevents.1627297382.ubuntu.128536.0
catkin_ws/src/trainer/tensorboard_log_dir/SAC_8/: events.out.tfevents.1627297464.ubuntu.129454.0
catkin_ws/src/unity_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/unity_bridge/scripts/: unity_tcp_communication.py
catkin_ws/src/unity_bridge/srv/: SimulationMode.srv  SimulationReset.srv  SimulationStep.srv
(+1 files in other folders)
