<?xml version="1.0"?>
<package format="2">
  <name>orchestrator</name>
  <version>0.0.0</version>
  <description>The orchestrator package</description>

  <maintainer email="yumurta@todo.todo">yumurta</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    
  </export>
</package>
